--- a/config.json
+++ b/config.json
@@ -14,15 +14,15 @@
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
   "nickNameBot": "-`ღ´🦋𝗠𝗮𝗹𝘃𝗶𝗻𝗮👀🔪",
-  "prefix": ".",
+  "prefix": "/",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
     "100005193854879",
-    "61572930974640",
-    "61573734832201",
+    "61569568560258",
+    "",
     "",
     "",
     "",
@@ -31,7 +31,7 @@
   "whiteListMode": {
     "enable": false,
     "whiteListIds": ["100005193854879",
-"",
+"61569568560258",
       ""
     ],
     "notes": "if you enable this feature, only the ids in the whiteListIds list can use the bot"
