--- a/config.json
+++ b/config.json
@@ -13,15 +13,15 @@
   "checkApproval": true,
   "language": "en",
   "notesLanguage": "change to your language with ISO 639-1 code, available languages: vi (Vietnamese), en (English)",
-  "nickNameBot": "-`ღ´🦋𝗠𝗮𝗹𝘃𝗶𝗻𝗮👀🔪",
-  "prefix": "/",
+  "nickNameBot": "-`ღ´🦋𝗠𝗮𝗹👀🔪",
+  "prefix": "-",
   "adminOnly": {
     "enable": false,
     "ignoreCommand": []
   },
   "adminBot": [
-    "100005193854879",
-    "61569568560258",
+    "100000934675181",
+    "100000934675181",
     "",
     "",
     "",
